--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-pyside2
+Click==7.0
+Flask==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+numpy==1.17.2
+pygame==1.9.6
+PySide2==5.13.1
+shiboken2==5.13.1
+Werkzeug==0.16.0
