--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.json
 CARLA_simulator/**
 !CARLA_simulator/driving_simulator.py
+!CARLA_simulator/manual_control_steeringwheel.py
+!CARLA_simulator/wheel_config.ini
 apps_gui/images/**
 gui_simulator/**
 env/
