--- a/simulator/drt_config.json
+++ b/simulator/drt_config.json
@@ -2,17 +2,17 @@
     "config": {
         "size": 20,
         "color": "#14ff53",
-        "duration": 2,
-        "mode_on": 1,
+        "light_on_duration": 2,
+        "mode_id": 1,
         "position": 1
     },
     "modes": [
         {
             "id": 1,
             "name": "random",
-            "interval": {
-                "start" : 1,
-                "end" : 3
+            "light_off_interval": {
+                "start": 1,
+                "end": 3
             }
         },
         {
@@ -25,15 +25,15 @@
             "id": 1,
             "name": "random",
             "quadrants": {
-                "1" : false,
-                "2" : false,
-                "3" : false,
-                "4" : false,
-                "5" : true,
-                "6" : false,
-                "7" : false,
-                "8" : false,
-                "9" : false
+                "1": false,
+                "2": false,
+                "3": false,
+                "4": false,
+                "5": true,
+                "6": false,
+                "7": false,
+                "8": false,
+                "9": false
             }
         },
         {
